added dashboard and a photo of myself!

--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@ $(document).ready(function () {
   <a href="Lin_Yang_Resume.pdf">Resume</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;ly2565cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -274,9 +277,9 @@ $(document).ready(function () {
 </div>
 
 
-<div id="this-is-lins-awesome-website" class="section level1">
-<h1>This is Lin’s awesome website</h1>
-<p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
+<div id="this-is-lins-first-website" class="section level1">
+<h1>This is Lin’s first website!</h1>
+<p><img src="images/img_linyang.jpg" style="width:75%"></p>
 <p>Here’s the link to my <a href="about.html">resume</a>.</p>
 </div>
 
