--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.knit</title>
+<title>Lin Yang</title>
 
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -29,6 +29,9 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -220,6 +223,69 @@ $(document).ready(function () {
 
 
 
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
+
+
 
 </head>
 
@@ -227,6 +293,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -273,18 +349,31 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Lin Yang</h1>
 
 </div>
 
 
-<div id="this-is-lins-first-website" class="section level1">
-<h1>This is Lin’s first website!</h1>
-<p><img src="images/img_linyang.jpg" style="width:75%"></p>
-<p>Here’s the link to my <a href="about.html">resume</a>.</p>
+<p>My Name is Lin Yang. I’m currently a first year MS Biostatistics student at Columbia University, mailman school of public health.</p>
+<p><img src="images/img_linyang.jpg" style="width:50%"></p>
+<div id="about-me" class="section level2">
+<h2>About me</h2>
+<p>I obtained my BA in Molecular and Cell Biology from University of California, Berkeley. With a strong background in biology, I’m currently studying Biostatistics which I’m passionate about. I love data analysis, my career goal is to become a Biostatistician who performs data analysis in healthcare field or a data scientisit in any other fields.</p>
+<p>I have strong molecular biology experimental skills. I’ve volunteered as a lab assistant in Regenerative Sciences Institute, San Jose, CA. I’m also involved in other fields. I’ve been an intern English editor in a top English online education company in China. More details about my experience can be found in my <a href="Lin_Yang_Resume.pdf">resume</a>.</p>
+</div>
+<div id="contact-information" class="section level2">
+<h2>Contact Information</h2>
+<p>Lin Yang<br />
+408-666-548850<br />
+50 Haven Ave<br />
+New York, NY 10032</p>
+<p>Email: <a href="mailto:ly2565@cumc.columbia.edu" class="email">ly2565@cumc.columbia.edu</a></p>
 </div>
 
 
 
+</div>
+</div>
 
 </div>
 
@@ -317,6 +406,35 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
+<script>
+$(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
