edited homepage and dashboard

--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@ div.tocify {
 <div id="about-me" class="section level2">
 <h2>About me</h2>
 <p>I obtained my BA in Molecular and Cell Biology from University of California, Berkeley. With a strong background in biology, I’m currently studying Biostatistics which I’m passionate about. I love data analysis, my career goal is to become a Biostatistician who performs data analysis in healthcare field or a data scientisit in any other fields.</p>
-<p>I have strong molecular biology experimental skills. I’ve volunteered as a lab assistant in Regenerative Sciences Institute, San Jose, CA. I’m also involved in other fields. I’ve been an intern English editor in a top English online education company in China. More details about my experience can be found in my <a href="Lin_Yang_Resume.pdf">resume</a>.</p>
+<p>I have strong molecular biology experimental skills. I’ve volunteered as a lab assistant in Regenerative Sciences Institute, San Jose, CA. I’m also involved in other fields. I’ve been an intern English editor in a top English online education company in China. More details about my experience can be found <a href="Lin_Yang_Resume.pdf">here</a>.</p>
 </div>
 <div id="contact-information" class="section level2">
 <h2>Contact Information</h2>
 <p>Lin Yang<br />
-408-666-548850<br />
+408-666-5488<br />
 50 Haven Ave<br />
 New York, NY 10032</p>
 <p>Email: <a href="mailto:ly2565@cumc.columbia.edu" class="email">ly2565@cumc.columbia.edu</a></p>
